fix: use a value-key to update the input value
* If a value-key is specified the input will be updated with the given
* value
when an item is selected
* Fixed a bug that caused the `salte-search-box` to not close.

This closes #3 and closes #4

--- a/demo/index.html
+++ b/demo/index.html
@@ -38,7 +38,7 @@
             loading="{{loading}}"
             debounce-duration="300">
           </iron-ajax>
-          <salte-search-box loading="[[loading]]" value="{{params.name}}" results="[[data]]"></salte-search-box>
+          <salte-search-box loading="[[loading]]" value="{{params.name}}" results="[[data]]" value-key="name"></salte-search-box>
         </template>
         <script>
           var demo = document.querySelector('template[is="dom-bind"]');
