--- a/salte-search-box-behavior.html
+++ b/salte-search-box-behavior.html
@@ -52,7 +52,12 @@
       /**
        * The list of items to display in the search results menu
        */
-      results: Array
+      results: Array,
+
+      /**
+       * The key used to set the value when an item is selected
+       */
+      valueKey: String
     },
 
     listeners: {
