docs: remove mentions of `salte-search-item`

--- a/salte-search-box.html
+++ b/salte-search-box.html
@@ -10,7 +10,7 @@
 
 
 <!--
-  At the present time `salte-search-box` requires that you implement a element called `salte-search-item` so that you can use a custom template.
+  A custom search element with template support!
 
   ```html
   <salte-search-box results="[[results]]"></salte-search-box>
