feat: add keyboard shortcuts
* Pushing enter submits the current result
* Pushing up or shift+tab selects the previous result
* Pushing down or tab selects the next result

this closes #5

--- a/salte-search-box-behavior.html
+++ b/salte-search-box-behavior.html
@@ -66,6 +66,14 @@
       'focusout': 'close'
     },
 
+    keyBindings: {
+      'up': 'selectPrevious',
+      'tab+shift': 'selectPrevious',
+      'down': 'selectNext',
+      'tab': 'selectNext',
+      'enter': '__submit'
+    },
+
     _computeOpened: function(focused, size) {
       return focused && !!size;
     },
