fix: keyboard navigation

--- a/salte-search-box-behavior.html
+++ b/salte-search-box-behavior.html
@@ -67,10 +67,10 @@
     },
 
     keyBindings: {
-      'up': 'selectPrevious',
-      'tab+shift': 'selectPrevious',
-      'down': 'selectNext',
-      'tab': 'selectNext',
+      'up': '__selectPrevious',
+      'tab+shift': '__selectPrevious',
+      'down': '__selectNext',
+      'tab': '__selectNext',
       'enter': '__submit'
     },
 
