--- a/test/index.html
+++ b/test/index.html
@@ -14,7 +14,8 @@
     WCT._config.environmentScripts.push(shadow ? 'webcomponentsjs/webcomponents.js' : 'webcomponentsjs/webcomponents-lite.js');
 
     WCT.loadSuites([
-      'basic.html'
+      'basic.html',
+      'keyboard-navigation.html'
     ]);
   </script>
 </body>
