BREAKING CHANGE: added the `selected` binding
* Removed the `search-select` event

--- a/salte-search-box-behavior.html
+++ b/salte-search-box-behavior.html
@@ -43,6 +43,14 @@
       },
 
       /**
+       * The selected item
+       */
+      selected: {
+        type: Object,
+        notify: true
+      },
+
+      /**
        * Displays a spinner in place of the search icon when true
        */
       loading: {
