--- a/salte-search-box-behavior.html
+++ b/salte-search-box-behavior.html
@@ -34,6 +34,11 @@
       },
 
       /**
+       * The placeholder of the input
+       */
+      placeholder: String,
+
+      /**
        * The value in the search field
        */
       value: {
