--- a/salte-search-box.html
+++ b/salte-search-box.html
@@ -174,18 +174,20 @@
       },
 
       childrenUpdated: function(mutations) {
-        for (var mutation of mutations) {
-          for (var node of mutation.removedNodes) {
-            if (node.is === 'paper-item') {
+        mutations.forEach(function(mutation) {
+          for (var i = 0; i < mutation.removedNodes.length; i++) {
+            var node = mutation.addedNodes[i];
+            if (node && node.is === 'paper-item') {
               node.removeEventListener('mousedown', this.__submit.bind(this));
             }
           }
-          for (var node of mutation.addedNodes) {
-            if (node.is === 'paper-item') {
+          for (var i = 0; i < mutation.addedNodes.length; i++) {
+            var node = mutation.addedNodes[i];
+            if (node && node.is === 'paper-item') {
               node.addEventListener('mousedown', this.__submit.bind(this));
             }
           }
-        }
+        }.bind(this));
       },
 
       __computeItemHeight: function(opened, size) {
