--- a/salte-search-box.html
+++ b/salte-search-box.html
@@ -30,7 +30,7 @@
     /* Search Container Styling */
 
     .container {
-      background-color: rgba(255, 255, 255, 0.16);
+      background-color: rgba(224,224,224, 0.16);
       color: white;
       transition: all 0.2s ease;
       border-radius: 2px;
@@ -103,6 +103,7 @@
     }
 
     .search-icon {
+      color: var(--secondary-text-color, #212121);
       transition: opacity 1s ease;
       opacity: 1;
     }
