--- a/salte-search-box.html
+++ b/salte-search-box.html
@@ -47,7 +47,7 @@
 
     #search {
       font-size: 16px;
-      color: white;
+      color: var(--disabled-text-color, #212121);
       padding: 0 72px;
       box-sizing: border-box;
       height: 48px;
@@ -62,7 +62,8 @@
     }
 
     #search, #search::-webkit-input-placeholder {
-      color: white;
+      color: var(--disabled-text-color, #212121);
+      @apply(--salte-search-placeholder);
     }
 
     :host([active]) #search {
@@ -106,6 +107,7 @@
       color: var(--secondary-text-color, #212121);
       transition: opacity 1s ease;
       opacity: 1;
+      @apply(--salte-search-icon);
     }
 
     :host([loading]) .search-icon {
